--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -153,13 +153,9 @@
     "\n",
     "Can we see evidence of possible cheating at Harrell Budd Elementary? Is Harrell Budd Elementary's fourth grade reading classrooms the only place where we see signs of possible cheating in 2004? \n",
     "\n",
-    "How else can you design regressions to help you uncover other instances of cheating? \n",
+    "How else can you design regressions to help you uncover other instances of cheating? Let's build a model to find out.\n",
     "\n",
-    "In the cells below, try to define your own questions and see if you can uncover other suspicious scores using regressions. You may also want to use plots as necessary. You can start with reading (`r_all_rs`) and math (`m_all_rs`) scores in the data we have loaded, but if you'd like, you're also welcome to bring in other variables from the [data documentation](\n",
-    "https://tea.texas.gov/sites/default/files/TAKS-Variables-prior2005.pdf).\n",
-    "\n",
-    "- If you've got an interesting finding, put up a green sticky note! 🟩\n",
-    "- If you're stuck, put up a red sticky note! 🟥"
+    "![](residuals.png)\n"
    ]
   },
   {
